app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require vendor/jquery-ui.min
 *= require vendor/bootstrap.min
 *= require vendor/all.min
 *= require vendor/animate.min
 *= require vendor/style.min
 *= require vendor/style-responsive
 *= require vendor/default
 *= require vendor/dataTables.bootstrap.min
 *= require vendor/buttons.bootstrap.min
 *= require vendor/responsive.bootstrap.min
 *= require vendor/parsley
 *= require vendor/jquery.gritter
 *= require vendor/switchery.min
 *= require vendor/bootstrap-datepicker.min
 *= require vendor/bootstrap-tagsinput
 *= require select2
 *= require select2-bootstrap
 *= require_self
 */

body.pattern-white{
  background: url(asset_path('pattern-bg-white.png'));
}
.extend_image img {
  height: 40px !important;
  object-fit: cover;
}

.social-links {
  font-size: 1.3em !important;
  text-align: center;
}

.select2 {
    width: 100% !important;
}

.lbl-padding-t {
  padding-top: 7px!important;
}

li[aria-disabled="true"] {
    margin-top:8px;
    border-top:1px solid #666;
    padding:0;
}

.data-table-buttons {
  width: 100% !important;
  max-width: none !important;
}
.data-table-no-buttons {
  width: 100% !important;
  max-width: none !important;
}
table.dataTable {
  margin-bottom: 0 !important;
}
.notification-padding {
  padding: 12px !important;
}
.hlc { width:100%; text-align:center; border-bottom: 1px solid #000; line-height:0.1em; margin:10px 0 20px; }
.hlc span { padding:0 10px; font-size: 14px; font-weight: bolder;}
.text-scout {
  color: #dd2c35!important;
}
.btn-scout {
  background-color: #A6181F!important;
  border-color: #A6181F!important;
  color: #fff;
  transition: .1s;
}
.btn-scout:hover {
  background-color: #6f060b!important;
  border-color: #6f060b!important;
}
.checkbox.checkbox-css input:checked+label:before {
    background: #A6181F!important;
    border-color: #A6181F!important;
}
#file-selected {
  overflow: hidden;
  white-space: nowrap;
}
#file-upload {
  cursor: pointer;
}
.custom-file {
  margin-bottom: 5px;
}
.form-control:focus {
  border-color: #dd2c35!important;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(221, 44, 53, .8)!important;
}
.custom-file-label::after {
  height: 100%!important;
  line-height: 2!important;
}
.custom-file label {
  font-weight: normal!important;
  line-height: 1.7!important;
}
.custom-file-label::after {
  background-color: #A6181F;
  color: #fff;
  border-left: 1px solid #A6181F;
}
.custom-file-input:focus ~ .custom-file-label {
  border-color: #dd2c35!important;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(219, 135, 185, .8)!important;
}
.custom-file-input:focus ~ .custom-file-label::after {
  border-color: #dd2c35!important;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(219, 135, 185, .8)!important;
}
.header.navbar-default {
  background: #131c24!important;
}
.header.navbar-default .brand, .header.navbar-default .navbar-brand {
  color: #fff;
  font-family: 'Poppins', sans-serif!important;
  font-size: 24px;
}
.boxed-layout .page-container {
  box-shadow: 0 0 30px rgba(2,2,2,.6);
}
.boxed-layout .page-container, .header.navbar-default .navbar-toggle .icon-bar {
  background-color: #fff;
}
/*.login.login-v2 {
  margin-top: 130px!important;
}*/
.boxed-layout .page-container, .boxed-layout .page-container #header {
  width: 90vw!important;

}
.boxed-layout .pace, .boxed-layout .top-menu {
  width: 90vw!important;
  left: 0;
  margin: 0;
}
.content {
  padding: 0;
}
.header .navbar-nav>li .dropdown-toggle .label, .header .navbar-nav>li>a .label {
  background-color: #dd2c35!important;
}
.active.carrier {
  background-color: #A6181F!important;
  color: #fff!important;
  font-weight: bold;
}
.active.carrier:hover {
  background-color: #A6181F!important;
  color: #fff!important;
  font-weight: bold;
  opacity: .8;
}
.active.shipper {
  background-color: #005a58!important;
  color: #fff!important;
  font-weight: bold;
}
.active.shipper:hover {
  background-color: #005a58!important;
  color: #fff!important;
  font-weight: bold;
  opacity: .8;
}
.active.activity {
  background-color: #ee9c10!important;
  color: #fff!important;
  font-weight: bold;
}
.active.activity:hover {
  background-color: #ee9c10!important;
  color: #fff!important;
  font-weight: bold;
  opacity: .8;
}
.active.rate {
  background-color: #014b0a!important;
  color: #fff!important;
  font-weight: bold;
}
.active.rate:hover {
  background-color: #014b0a!important;
  color: #fff!important;
  font-weight: bold;
  opacity: .8;
}
.active.steward {
  background-color: #7e1d7e!important;
  color: #fff!important;
  font-weight: bold;
}
.active.steward:hover {
  background-color: #7e1d7e!important;
  color: #fff!important;
  font-weight: bold;
  opacity: .8;
}
.bg-inverse {
  background-color: #1a2229!important;
}
.top-nav-icon {
    width: 100px;
  }
.content-table {
  padding: 0!important;
}
.panel-scout>.panel-heading {
  background-color: #6f060b;
  color: #fff;
}
.panel-darkblue>.panel-heading {
  background-color: #013a38;
  color: #fff;
}
.panel-yelloworange>.panel-heading {
  background-color: #dd8b00;
  color: #fff;
}
.panel-emerald>.panel-heading {
  background-color: #033309;
  color: #fff;
}
.panel-violet>.panel-heading {
  background-color: #530254;
  color: #fff;
}
.login-cover-bg {
  background-color: rgba(255,255,255, .4);
}
.panel-heading {
  padding: 15px;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}
.lp-header {
  padding-left: 5px;
  font-family: 'Poppins', sans-serif!important;
  font-weight: 500;
  font-size: 20px;
}
.header-scout {
  padding: 15px;
  width: 100%;
  height: 50px;
  background-color: #6f060b;
}
.header-darkblue {
  padding: 15px;
  width: 100%;
  height: 50px;
  background-color: #013a38;
}
.header-violet {
  padding: 15px;
  width: 100%;
  height: 50px;
  background-color: #530254;
}
.header-scout h1, .header-darkblue h1, .header-violet h1, {
  color: #fff;
  font-family: 'Poppins', sans-serif!important;
  font-size: 20px;
}
.header-scout small, .header-violet small, .header-darkblue small {
  color: #fff;
  font-family: 'Poppins', sans-serif!important;
  font-size: 15px;
}
.header-scout a, .header-violet a, .header-darkblue a {
  color: #fff!important;
}
.lane-priority-1 {
  background: #baffc9;
}
.lane-priority-2 {
  background: #bae1ff;
}
.lane-priority-3 {
  background: #dddddd;
}
.tags {
  display: inline-block;
}
tfoot {
     display: table-header-group;
}
small.version {
  font-size: 50%;
}

.dataTables_scroll {position: relative;}
.dataTables_scrollHead {margin-bottom: 20px;}
.dataTables_scrollFoot {position: absolute; top: 38px;}
.table > tfoot > tr > th {padding: 0;}

